apps/mailcow/dms-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dms
  namespace: mailcow
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dms
  serviceName: dms-service
  template:
    metadata:
      labels:
        app: dms
    spec:
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: CONTAINER_NAME
              value: mailserver
          image: mailserver/docker-mailserver:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - nc -z localhost 25
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: dms
          ports:
            - containerPort: 25
              name: smtp
              protocol: TCP
            - containerPort: 465
              name: smtps
              protocol: TCP
            - containerPort: 587
              name: submission
              protocol: TCP
            - containerPort: 143
              name: imap
              protocol: TCP
            - containerPort: 993
              name: imaps
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - nc -z localhost 143
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/mail
              name: mail-data
            - mountPath: /etc/dms
              name: dms-config
            - mountPath: /tmp
              name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 101
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mail-data
          persistentVolumeClaim:
            claimName: dms-mail-data
        - name: dms-config
          persistentVolumeClaim:
            claimName: dms-config
        - emptyDir: {}
          name: tmp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
