apps/mailcow/roundcube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roundcube
  name: roundcube-service
  namespace: mailcow
spec:
  clusterIP: 10.43.114.236
  clusterIPs:
    - 10.43.114.236
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: roundcube
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '10'
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.0.134"],"port":443,"protocol":"HTTPS","serviceName":"mailcow:roundcube-service","ingressName":"mailcow:mail-ingress","hostname":"mail.gamifying.dev","path":"/","allNodes":false},{"addresses":["192.168.0.134"],"port":443,"protocol":"HTTPS","serviceName":"mailcow:roundcube-service","ingressName":"mailcow:mailcow-ingress","hostname":"webmail.gamifying.dev","path":"/","allNodes":false}]'
  name: roundcube
  namespace: mailcow
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: roundcube
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
        - env:
            - name: ROUNDCUBEMAIL_DEFAULT_HOST
              value: dms-service.mailcow.svc.cluster.local
            - name: ROUNDCUBEMAIL_DEFAULT_PORT
              value: '143'
            - name: ROUNDCUBEMAIL_IMAP_PORT
              value: '143'
            - name: ROUNDCUBEMAIL_IMAP_SECURE
              value: 'false'
            - name: ROUNDCUBEMAIL_SMTP_HOST
              value: dms-service.mailcow.svc.cluster.local
            - name: ROUNDCUBEMAIL_SMTP_PORT
              value: '25'
            - name: ROUNDCUBEMAIL_SMTP_SECURE
              value: 'false'
            - name: ROUNDCUBEMAIL_SMTP_USER
              value: '%u'
            - name: ROUNDCUBEMAIL_SMTP_PASS
              value: '%p'
            - name: ROUNDCUBEMAIL_SKIN
              value: larry
            - name: ROUNDCUBEMAIL_PLUGINS
              value: archive,zipdownload
            - name: ROUNDCUBEMAIL_DB_DRIVER
              value: sqlite
            - name: ROUNDCUBEMAIL_DB_HOST
              value: sqlite
          image: roundcube/roundcubemail:latest-apache
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: roundcube
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/roundcube/db
              name: roundcube-db
            - mountPath: /var/www/html/config/config.docker.inc.php
              name: roundcube-config
              subPath: config.docker.inc.php
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: roundcube-db
          persistentVolumeClaim:
            claimName: roundcube-db
        - configMap:
            defaultMode: 420
            name: roundcube-config
          name: roundcube-config
