apps/mailcow/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dms
  name: dms-service
  namespace: mailcow
spec:
  clusterIP: 10.43.177.92
  clusterIPs:
    - 10.43.177.92
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
    - name: smtps
      port: 465
      protocol: TCP
      targetPort: 465
    - name: submission
      port: 587
      protocol: TCP
      targetPort: 587
    - name: imap
      port: 143
      protocol: TCP
      targetPort: 143
    - name: imaps
      port: 993
      protocol: TCP
      targetPort: 993
  selector:
    app: dms
  sessionAffinity: None
  type: ClusterIP
